--- a/less/index.less
+++ b/less/index.less
@@ -1,5 +1,5 @@
 body#login-body{
-    background: #f4ecbe;
+    background:#c1e1c9;
     div.login{
         margin:0px auto;
         margin-top:40vh;
@@ -19,10 +19,16 @@ body#room-body{
     div.container{
         padding:20px;
     }
-    background: #f4ecbe;
+    background: #c1e1c9;
     div.rooms{
         padding:20px;
         margin:10px;
+        background: #92d282;
+        button{
+            background:#87C0F1;
+            height:3em;
+            
+        }
     }
     button{
         color:white;
