--- a/less/game.less
+++ b/less/game.less
@@ -14,6 +14,7 @@ body#game {
     }
     div.game-main {
         border: 1px solid;
+        text-align: center;
         div.game-plain {
             margin-top: 20px;
             margin-left: auto;
@@ -35,11 +36,19 @@ body#game {
             margin-right: auto;
             margin-bottom: 20px;
             border: 1px solid;
-            text-align: center;
             div.tool {
                 display: inline-block;
                 width: 100px;
                 height: 100px;
+                border: 1px solid;
+            }
+        }
+        div.pointer-box {
+            margin-left:auto;
+            margin-right:auto;
+            div.pointer {
+                display: inline-block;
+                width: 100px;
                 border: 1px solid;
             }
         }
