--- a/less/index.less
+++ b/less/index.less
@@ -1,40 +1,37 @@
-body#login-body{
-    background:#c1e1c9;
-    div.login{
-        margin:0px auto;
-        margin-top:40vh;
+body#login-body {
+    background: #c1e1c9;
+    div.login {
+        margin: 0px auto;
+        margin-top: 40vh;
         border-radius: 30px;
-        width:300px;
-        height:150px;
-        
+        width: 300px;
+        height: 150px;
     }
-    button{
-        color:white;
+    button {
+        color: white;
     }
 }
-
-
-
-body#room-body{
-    div.container{
-        padding:20px;
+body#room-body {
+    div.container {
+        padding: 20px;
     }
-    background: #c1e1c9;
-    div.rooms{
-        padding:20px;
-        margin:10px;
+    background:#c1e1c9;
+    div.rooms {
+        padding: 20px;
+        margin: 10px;
         background: #92d282;
-        button{
-            background:#87C0F1;
-            height:3em;
-            
+        border-radius: 20px;
+        button {
+            background: #87C0F1;
+            height: 3em;
         }
     }
-    button{
-        color:white;
+    button {
+        color: white;
     }
-    div.user-info{
-        padding:10px;
-        color:white;
+    div.user-info {
+        margin: 10px;
+        padding: 10px;
+        color: white;
     }
 }
