--- a/less/index.less
+++ b/less/index.less
@@ -16,9 +16,9 @@ body#room-body {
         padding: 20px;
     }
     background:#c1e1c9;
-    div.rooms {
-        padding: 20px;
-        margin: 10px;
+    div.room {
+        padding: 10px;
+        margin-top: 10px;
         background: #92d282;
         border-radius: 20px;
         button {
