finish hall part

--- a/less/game.less
+++ b/less/game.less
@@ -6,10 +6,9 @@ body#game {
             margin-right: auto;
             margin-bottom: 20px;
             padding: 10px;
-            border: 2px turquoise;
+            border: 2px;
             border-radius: 20px;
             height: 100px;
-            background: turquoise;
         }
     }
     div.game-main {
