--- a/less/index.less
+++ b/less/index.less
@@ -35,3 +35,11 @@ body#room-body {
         color: white;
     }
 }
+body#game{
+    background: #c1e1c9;
+    textarea{
+        width:100%;
+        height:70vh;
+        background: #c1e1c9;
+    }
+}
