--- a/less/game.less
+++ b/less/game.less
@@ -14,7 +14,7 @@ body#game {
     div.game-main {
         border: 1px solid;
         text-align: center;
-        div.game-plain {
+        .game-plain {
             margin-top: 20px;
             margin-left: auto;
             margin-right: auto;
@@ -22,12 +22,6 @@ body#game {
             width: 390px;
             height: 390px;
             border: 1px solid;
-            div.box {
-                height: 30px;
-                width: 30px;
-                border: 1px solid;
-                display: inline-block;
-            }
         }
         div.tool-box {
             margin-top: 20px;
