--- a/less/game.less
+++ b/less/game.less
@@ -9,45 +9,21 @@ body#game {
             border: 2px;
             border-radius: 20px;
             height: 100px;
+            width: 80%;
         }
     }
     div.game-main {
-        border: 1px solid;
         text-align: center;
-        .game-plain {
-            margin-top: 20px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-bottom: 20px;
-            width: 390px;
-            height: 390px;
-            border: 1px solid;
-        }
-        div.tool-box {
-            margin-top: 20px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-bottom: 20px;
-            border: 1px solid;
-            div.tool {
-                display: inline-block;
-                width: 100px;
-                height: 100px;
-                border: 1px solid;
-            }
-        }
-        div.pointer-box {
-            margin-left:auto;
-            margin-right:auto;
-            div.pointer {
-                display: inline-block;
-                width: 100px;
-                border: 1px solid;
-            }
-        }
+        margin-top:100px;
+        margin-bottom:100px;
     }
-    div.coding-plain {
-        border: 1px solid;
-        height: 80vh;
+    background: #c1e1c9;
+    textarea{
+        width:100%;
+        height:70vh;
+        background: #f6d97e;
+    }
+    canvas{
+
     }
 }
