--- a/less/index.less
+++ b/less/index.less
@@ -34,12 +34,13 @@ body#room-body {
         padding: 10px;
         color: white;
     }
+
+    div.users{
+        margin: 10px;
+        padding:10px;
+        color:white;
+    }
 }
 body#game{
-    background: #c1e1c9;
-    textarea{
-        width:100%;
-        height:70vh;
-        background: #c1e1c9;
-    }
+
 }
