--- a/less/index.less
+++ b/less/index.less
@@ -68,6 +68,7 @@ body#game {
             border-radius: 20px;
             height: 100px;
             width: 80%;
+            font-size:1.5em;
         }
     }
     div.game-main {
