--- a/less/index.less
+++ b/less/index.less
@@ -71,10 +71,21 @@ body#game {
             font-size:1.5em;
         }
     }
+    div.system-info{
+        margin:20px;
+        font-size:1.6em;
+        div{
+            font-size:1.4em;
+        }
+    }
     div.game-main {
         text-align: center;
-        margin-top: 100px;
+        margin-top: 10px;
         margin-bottom: 100px;
+        div.time{
+            margin:40px;
+        }
+        
     }
     background:#c1e1c9;
     div.coding {
